fix: sidebar on mobile (#79)

--- a/src/components/DataSourcesMenu/index.module.less
+++ b/src/components/DataSourcesMenu/index.module.less
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  max-width: 420px;
+  // max-width: 420px;
   padding: 0 10px 10px;
   overflow: hidden;
+  color: #470d69;
   font-weight: 600;
   text-wrap: nowrap;
   text-overflow: ellipsis;
