--- a/src/components/Sidebar/index.module.less
+++ b/src/components/Sidebar/index.module.less
@@ -8,6 +8,7 @@
   &Mobile {
     width: 100%;
     height: 100vh;
+    border-right: none;
   }
 }
 
